# pasiphae

./: .gitignore  CONTRIBUTING.rst  Makefile  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  tests.yml
dazbog/: __main__.py  cli.py  types.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  pasiphae.rst  usage.rst
pasiphae/: __main__.py  cli.py  domain.py  file.py  resolvers.py  to_python_type.py  tools.py  types.py
tests/: test_dazbog.py  test_pasiphae.py  test_tools.py
tests/examples/custom_scalars/in/: scalars.py
tests/examples/simple_query/: expected-resolvers.py  expected-types.py  schema.graphql
